AbstractPagableのイテレーターの動作を変更